Fixed jdk 1.4 usage, allow to run tests in package containing invalid test suites